--- a/src/components/Cart/Cart.global.css
+++ b/src/components/Cart/Cart.global.css
@@ -6,6 +6,8 @@
   display: flex;
   flex-direction: column;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  position: relative;
+  overflow: hidden;
 }
 .Cart-header {
   margin-bottom: 35px !important;
@@ -32,4 +34,52 @@
 }
 .Cart-actions .resume > * {
   margin: 0;
+}
+
+/* EditModal Styles */
+
+.EditModal-modal {
+  background: white;
+  border-radius: 10px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  transform: translateY(110%);
+  overflow: hidden;
+  transition: 0.25s;
+  z-index: 100;
+  padding: 15px;
+}
+.EditModal-modal.open {
+  transform: translateY(0%);
+}
+.EditModal-modal.close {
+  transform: translateY(110%);
+}
+
+.EditModal-modal-content {
+  position: relative;
+}
+
+.EditModal-modal-close-icon {
+  position: absolute;
+  right: -4px;
+  top: -4px;
+  cursor: pointer;
+  color: grey;
+  z-index: 100;
+}
+
+.EditModal-modal-image-container {
+  height: 120px;
+  width: 100%;
+  overflow: hidden;
+}
+
+.EditModal-modal-image {
+  height: 100%;
+  width: 100%;
+  object-position: center center;
+  object-fit: cover;
 }
