--- a/src/components/CartItem/CartItem.global.css
+++ b/src/components/CartItem/CartItem.global.css
@@ -2,6 +2,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: 0.2s;
+  cursor: pointer;
+}
+.CartItem-container:hover {
+  transform: scale(1.05);
 }
 .CartItem-header-container {
   flex: 1;
