--- a/src/components/CartItem/CartItem.global.css
+++ b/src/components/CartItem/CartItem.global.css
@@ -4,6 +4,10 @@
   align-items: center;
   transition: 0.2s;
   cursor: pointer;
+  border: none;
+  width: 100%;
+  text-align: left;
+  background: transparent;
 }
 .CartItem-container:hover {
   transform: scale(1.05);
