--- a/src/components/ProductCard/ProductCard.global.css
+++ b/src/components/ProductCard/ProductCard.global.css
@@ -1,3 +1,17 @@
+.ProductCard {
+  position: relative;
+}
+.ProductCard-start-fav {
+  position: absolute;
+  z-index: 2;
+  right: 8px;
+  top: 8px;
+  cursor: pointer;
+  transition: 0.15s;
+}
+.ProductCard-start-fav:active {
+  transform: scale(1.5);
+}
 .ProductCard-image-container {
   width: 100%;
   height: 170px;
