--- a/src/components/RfidCard/RfidCard.global.css
+++ b/src/components/RfidCard/RfidCard.global.css
@@ -1,10 +1,10 @@
-.RfidCard{
+.RfidCard {
   width: 100%;
   height: 150px;
   background-color: rgb(210, 210, 210);
   border-radius: 15px;
   margin: 15px 0;
-  box-shadow: 3px 3px 10px rgba(0, 0, 0, .2);
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,20 +12,30 @@
   position: relative;
 }
 
-.RfidCard.reading{
-  border: 2px solid #2185D0;
+.RfidCard.reading {
+  border: 2px solid #2185d0;
 }
-.RfidCard.success{
+.RfidCard.success {
   border: 2px solid #16ab39;
-  background: rgba(22, 171, 57, .3);
+  background: rgba(22, 171, 57, 0.3);
 }
-.RfidCard.error{
+.RfidCard.error {
   border: 2px solid #db2828;
-  background: rgba(219, 40, 40,.3);
+  background: rgba(219, 40, 40, 0.3);
 }
 
+.RfidCard-action-icon {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  cursor: pointer;
+  transition: 0.15s;
+}
+.RfidCard-action-icon:active {
+  transform: scale(1.2);
+}
 
-.Rfid-circle{
+.Rfid-circle {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -33,17 +43,17 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background: #2185D0;
+  background: #2185d0;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.Rfid-circle > i{
+.Rfid-circle > i {
   margin: 0;
 }
 
-.Rfid-circle::before{
+.Rfid-circle::before {
   content: '';
   position: absolute;
   top: 50%;
@@ -53,11 +63,11 @@
   height: 50px;
   border-radius: 50%;
   background: black;
-  opacity: .2;
-  animation: ease-in-out .9s reading infinite;
-  animation-delay: .9s;
+  opacity: 0.2;
+  animation: ease-in-out 0.9s reading infinite;
+  animation-delay: 0.9s;
 }
-.Rfid-circle::after{
+.Rfid-circle::after {
   content: '';
   position: absolute;
   top: 50%;
@@ -66,20 +76,20 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background: #2185D0;
-  opacity: .2;
+  background: #2185d0;
+  opacity: 0.2;
   animation: ease-in-out 1.8s reading infinite;
 }
 
 @keyframes reading {
-    0%{
-      width: 50px;
-      height: 50px;
-      opacity: .3;
-    }
-    100%{
-      width: 200px;
-      height: 200px;
-      opacity: .0;
-    }
+  0% {
+    width: 50px;
+    height: 50px;
+    opacity: 0.3;
+  }
+  100% {
+    width: 200px;
+    height: 200px;
+    opacity: 0;
+  }
 }
